# nyc-commercial-intelligence

./: .env.example  .gitignore  README.md  app.py  env.example  make_ppt.py  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  run_pipeline.py
api/: __init__.py  cluster_helpers.py  formatting.py  loaders.py  main.py  rank_helpers.py  schemas.py
data/processed/: README.md  cdta_geo.json  nbhd_clean.csv  neighborhood_features.csv  neighborhood_features_final.csv  ped_clean.csv  ped_features.csv  ped_with_neighborhood.csv  pedestrian_clean.csv  poi_clean.csv  poi_features.csv  shooting_features.csv  storefront_features.csv  subway_clean.csv  subway_features.csv  subway_with_neighborhood.csv
data/raw/: README.MD
frontend/: .env.local.example  .gitignore  package-lock.json  package.json  plotly-dist-min.d.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: MultiSelect.tsx  NavBar.tsx  PlotlyChart.tsx  SectionCard.tsx  (+1 more)
pages/: Ranking.py  k_selection.py
scripts/: audit_imputation_fraction.py  build_cdta_geojson.py  load_supabase.py
src/: __init__.py  agent.py  columns.py  config.py  data_preprocessing.py  data_processing.py  embeddings.py  feature_engineering.py  kmeans_numpy.py  persistence_model.py  ranking.py  semantic_search.py  serialization.py
streamlit_app/: __init__.py  cluster_helpers.py  constants.py
tests/: README.md  data_eval_processing.py  rank_stability_validation_business_queries.py  run_eval_pipeline.py  test.sh  test_feature_engineering.py  test_kmeans.py  test_persistence.py
(+63 files in other folders)
