[project]
name = "nyc-commercial-intelligence"
version = "0.1.0"
description = "NYC neighborhood commercial intelligence — Streamlit dashboard and ML pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
