[project]
name = "nyc-commercial-intelligence"
version = "0.1.0"
description = "NYC neighborhood commercial intelligence — Streamlit dashboard and ML pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28",
    "numpy>=1.24",
    "pandas>=2.0",
    "geopandas>=1.0",
    "duckdb>=1.0",
    "tabulate>=0.9",
    "matplotlib>=3.7",
    "plotly>=5.0",
    "h5py>=3.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "scikit-learn>=1.3",
    "anthropic>=0.39",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "pytest>=7.0",
]

[project.optional-dependencies]
# Heavy stack (torch); install with `uv sync --extra local-embeddings`. Cloud: prefer OpenAI + cached embeddings.
local-embeddings = ["sentence-transformers>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
